samples/_failures_safe/1761474398_e88f18_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_84dfb72c.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_84dfb72c.c:161:9: error: expected identifier at end of input
  161 |         printf("Token %zu: %s -> '%s'\n", i, type_str, tokens->tokens[i].
      |         ^~~~~~
./samples/SAFE/__tmp_84dfb72c.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_84dfb72c.c:161:9: error: expected declaration or statement at end of input
